--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
-name = "yup-oauth2-custom-flow"
+name = "yup-oauth2-custom-client"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+yup-oauth2 = { version = "8.3.1", features = ["hyper-rustls"] }
+hyper = { version = "0.14", features = ["client", "server", "tcp", "http2"] }
+hyper-rustls = "0.24"
+hyper-tls = { version = "0.5.0", optional = true }
+tokio = { version = "1.0", features = ["fs", "macros", "io-std", "io-util", "time", "sync", "rt", "rt-multi-thread"] }
+http = "0.2"
+tower-service = "^0.3.1"
